<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/main"
   >

    <EditText
        android:id="@+id/signupUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_username"
        android:inputType=""/>

    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_password"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/confirmPassoword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_your_password"
        android:autofillHints=""
        android:inputType=""/>

    <CheckBox
        android:id="@+id/termsAndConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/termsAndConditions"/>

    <Button
        android:id="@+id/Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupButton"/>




</LinearLayout>